--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<button class="btn btn-primary">Potato</button>
+<app-button [type]="'PRIMARY'">
+  <app-icon [icon]="'dragon'"></app-icon>
+  Potato
+</app-button>
+<app-button [type]="'PRIMARY'">
+  <app-icon [icon]="'book'"></app-icon>
+  Potato
+</app-button>
