--- a/src/app/atoms/button/button.component.html
+++ b/src/app/atoms/button/button.component.html
@@ -4,6 +4,8 @@
     'btn-primary': type === 'PRIMARY',
     'btn-secondary': type === 'SECONDARY',
     'btn-dark': type === 'TERTIARY',
+    'btn-danger': type === 'DANGER',
+    'btn-warning': type === 'WARNING',
   }"
 >
   <ng-content></ng-content>
