--- a/src/app/molecules/article-footer/article-footer.component.html
+++ b/src/app/molecules/article-footer/article-footer.component.html
@@ -1,29 +1,30 @@
-<div class="row">
-  <div class="col-md-3">
-      <ng-container *ngIf="link; then linkButton; else nonLinkButton"></ng-container>
+<div class="container">
+  <div class="row">
+    <ng-container *ngIf="buttonLink; then linkButton; else nonLinkButton"></ng-container>
+  
+    <ng-container *ngIf="showDelete">
+      <app-confirmation-toggle-button 
+        class="col-md-9" 
+        [toggleType]="'DANGER'"
+        [confirmationQuestion]="deleteMessage"
+        (confirm)="delete.emit()"
+      >
+        <app-icon [icon]="'trash'"></app-icon>
+      </app-confirmation-toggle-button>
+    </ng-container>
   </div>
-
-  <ng-container *ngIf="showDelete">
-    <app-confirmation-toggle-button 
-      class="d-block" 
-      [toggleType]="'DANGER'"
-      [confirmationQuestion]="deleteMessage"
-      (confirm)="delete.emit()"
-    >
-      <app-icon [icon]="'trash'"></app-icon>
-    </app-confirmation-toggle-button>
-  </ng-container>
 </div>
 
 <ng-template #linkButton>
-  <a [routerLink]="link" (click)="buttonClick.emit()">
-    <app-button [type]="'SECONDARY'"></app-button>
-      {{label}}
+  <a [routerLink]="buttonLink" (click)="buttonClick.emit()">
+    <app-button [type]="'SECONDARY'" class="col-md-3">
+      {{buttonLabel}}
+    </app-button>
   </a>
 </ng-template>
 
 <ng-template #nonLinkButton>
-  <a (click)="buttonClick.emit()">
-      {{label}}
-  </a>
+  <app-button (click)="buttonClick.emit()" [type]="'SECONDARY'" class="col-md-3">
+    {{buttonLabel}}
+  </app-button>
 </ng-template> 
