--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,7 +1,26 @@
+// The core place for setting css variables
+
+@import './custom_bootstrap.scss';
 @import 'bootstrap/scss/bootstrap';
 
-$spacer-1: map-get($spacers, 1);
-$spacer-2: map-get($spacers, 2);
-$spacer-3: map-get($spacers, 3);
-$spacer-4: map-get($spacers, 4);
-$spacer-5: map-get($spacers, 5);
+:root{
+  // Assign those based on the bootstrap variables
+  --character-color: var(--bs-blue);
+  --item-color: var(--bs-yellow);
+  --creature-color: var(--bs-red);
+  --location-color: var(--bs-brown);
+  --organization-color: var(--bs-indigo);
+  --diaryentry-color: var(--bs-darkgreen);
+  --encounter-color: var(--bs-lightgreen);
+  --quest-color: var(--bs-white);
+  --sessionaudio-color: var(--bs-green);
+  --map-color: var(--bs-beige);
+  --rule-color: var(--bs-orange);
+  --spell-color: var(--bs-purple);
+  
+  --highlight-gray: rgba(61, 70, 77, 0.85);
+  
+  @each $index, $value in $spacers {
+    --spacer-#{$index}: #{$value};
+  }
+}
