Change ButtonType to ElementType

--- a/src/app/atoms/button/button.component.html
+++ b/src/app/atoms/button/button.component.html
@@ -3,7 +3,7 @@
   [ngClass]="{
     'btn-primary': type === 'PRIMARY',
     'btn-secondary': type === 'SECONDARY',
-    'btn-dark': type === 'TERTIARY',
+    'btn-dark': type === 'DARK',
     'btn-danger': type === 'DANGER',
     'btn-warning': type === 'WARNING',
   }"
