--- a/src/app/molecules/page-background/page-background.component.scss
+++ b/src/app/molecules/page-background/page-background.component.scss
@@ -3,14 +3,10 @@
 	-webkit-transform: scale(1.125);
 	-ms-transform: scale(1.125);
 	transform: scale(1.125);
-
-	position: fixed;
-	top: 0;
-	left: 0;
+	
+	height: 100%;
 	width: 100%;
-	height: 100vh;
-	z-index: -2;
-
+	
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
