Add formly datepicker field

--- a/src/app/atoms/button/button.component.html
+++ b/src/app/atoms/button/button.component.html
@@ -6,6 +6,7 @@
     'btn-dark': type === 'DARK',
     'btn-danger': type === 'DANGER',
     'btn-warning': type === 'WARNING',
+    'btn-light': type === 'LIGHT',
   }"
 >
   <ng-content></ng-content>
