--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,7 @@
 		background-color: var(--highlight-gray);
 	}
 }
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
+
+@import './custom_ngbootstrap.scss';
