Add info circle tooltip component

--- a/src/custom_bootstrap.scss
+++ b/src/custom_bootstrap.scss
@@ -86,7 +86,8 @@ $dark: $gray-800;
 $yiq-contrasted-threshold: 175;
 
 // Body
-
+$tooltip-color: $white;
+$tooltip-bg: $white;
 $body-bg: $gray-900;
 $body-color: $white;
 
