Add ability to button to change size

--- a/src/app/atoms/button/button.component.html
+++ b/src/app/atoms/button/button.component.html
@@ -7,6 +7,9 @@
     'btn-danger': type === 'DANGER',
     'btn-warning': type === 'WARNING',
     'btn-light': type === 'LIGHT',
+    
+    'btn-sm': size === 'SMALL',
+    'btn-lg': size === 'LARGE',
   }"
 >
   <ng-content></ng-content>
