Expanded capabilities of buttons and badges

--- a/src/app/atoms/badge/badge.component.html
+++ b/src/app/atoms/badge/badge.component.html
@@ -6,6 +6,8 @@
     'bg-dark': type === 'DARK',
     'bg-danger': type === 'DANGER',
     'bg-warning': type === 'WARNING',
+    'bg-light': type === 'LIGHT',
+    'bg-info': type === 'INFO',
   }"
 >
   <app-icon 
