--- a/src/app/atoms/interactive-badge/interactive-badge.component.html
+++ b/src/app/atoms/interactive-badge/interactive-badge.component.html
@@ -10,6 +10,8 @@
       'bg-dark': type === 'DARK',
       'bg-danger': type === 'DANGER',
       'bg-warning': type === 'WARNING',
+      'bg-info': type === 'INFO',
+      'bg-light': type === 'LIGHT',
     }"
   >
     {{text}}
