--- a/src/app/atoms/button/button.component.html
+++ b/src/app/atoms/button/button.component.html
@@ -7,6 +7,7 @@
     'btn-danger': type === 'DANGER',
     'btn-warning': type === 'WARNING',
     'btn-light': type === 'LIGHT',
+    'btn-info': type === 'INFO',
     
     'btn-sm': size === 'SMALL',
     'btn-lg': size === 'LARGE',
