--- a/src/app/organisms/formly-datepicker-field/formly-datepicker-field.component.scss
+++ b/src/app/organisms/formly-datepicker-field/formly-datepicker-field.component.scss
@@ -6,6 +6,10 @@
   width: 100%;
 }
 
+.disabled{
+  cursor: not-allowed;
+}
+
 .btn-outline-light{
   border-color: var(--bs-white);
   color: var(--bs-white);
