--- a/src/app/molecules/form/form.component.html
+++ b/src/app/molecules/form/form.component.html
@@ -5,7 +5,7 @@
 >
   <formly-form 
     [form]="form" 
-    [fields]="fields" 
+    [fields]="usedFields" 
     [model]="model"
   ></formly-form>
   
