Add Compare Form Component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,11 +20,9 @@
 	}
 }
 
-.form-label{
-  font-weight: bold;
-}
-
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
 
 @import './custom_ngbootstrap.scss';
+
+@import './global_class_modifications.scss';
