--- a/src/app/organisms/formly-datepicker-field/formly-datepicker-field.component.html
+++ b/src/app/organisms/formly-datepicker-field/formly-datepicker-field.component.html
@@ -1,4 +1,4 @@
-<div class="mb-3" [class.d-none]="to.hidden">
+<div class="mb-3 {{field.className}}" [class.d-none]="to.hidden">
   <label [for]="to['name']" class="form-label ">
       <strong>
           {{to.label}}
