--- a/src/app/organisms/formly-select-disable/formly-select-disable-field.component.html
+++ b/src/app/organisms/formly-select-disable/formly-select-disable-field.component.html
@@ -1,4 +1,4 @@
-<div class="field mb-3" [class.d-none]="to.hidden">
+<div class="field mb-3 {{field.className}}" [class.d-none]="to.hidden">
 
   <label 
     class="form-label"
