Remove unused param

--- a/src/app/molecules/formly-file-field/formly-file-field.component.html
+++ b/src/app/molecules/formly-file-field/formly-file-field.component.html
@@ -14,7 +14,7 @@
       #fileInputElement
       type="file" 
       class="d-none"
-      (change)="onFileSelect($event)"
+      (change)="onFileSelect()"
       [formControl]="formControl" 
       [formlyAttributes]="field" 
       [id]="to['name']" 
