Fix some fundamental file field issue
File fields can not be assigned to.
That fundamentally does not work as the browser will block you when doing so.
That is because the browser only has permission to give
images out that you selected, it can not access images
by getting values assigned to a field or the like.

--- a/src/app/molecules/formly-file-field/formly-file-field.component.html
+++ b/src/app/molecules/formly-file-field/formly-file-field.component.html
@@ -14,11 +14,11 @@
       #fileInputElement
       type="file" 
       class="d-none"
-      (change)="onFileSelect()"
+      (change)="onFileSelect($event)"
       [formControl]="formControl" 
       [formlyAttributes]="field" 
-      [id]="to['name']" 
-      [name]="to['name']"
+      [id]="props['name']" 
+      [name]="props['name']"
     >
   </app-button>
   <div class="mt-2">
