--- a/src/app/organisms/image-carousel-card/image-carousel-card.component.html
+++ b/src/app/organisms/image-carousel-card/image-carousel-card.component.html
@@ -50,7 +50,7 @@
     <app-form
       class="form-card__form"
       [model]="userModel"
-      [fields]="fields"
+      [fields]="updateFields"
       [enctype]="'multipart/form-data'"
       [cancelButtonType]="'DARK'"
       (formlySubmit)="onSubmit($event)"
@@ -70,7 +70,7 @@
     <app-form
       class="form-card__form"
       [model]="userModel"
-      [fields]="fields"
+      [fields]="createFields"
       [enctype]="'multipart/form-data'"
       [cancelButtonType]="'DARK'"
       (formlySubmit)="onSubmit($event)"
