--- a/src/custom_bootstrap.scss
+++ b/src/custom_bootstrap.scss
@@ -19,14 +19,14 @@ $gray-800: #303030;
 $gray-900: #222;
 $black: #000;
 
-$blue: #4169e1;
-$indigo: #5d3754;
-$purple: #9871D2;
+$blue: #42566a;
+$indigo: #6610f2;
+$purple: #6f42c1;
 $pink: #e83e8c;
-$red: #bc0f0f;
-$orange: #ee8600;
-$yellow: yellow;
-$green: green;
+$red: #bf4044;;
+$orange: #fd7e14;
+$yellow: #f39c12;
+$green: #00bc8c;
 $lightgreen: lightgreen;
 $darkgreen: #2f4a36;
 $teal: #20c997;
