Add toggle events to toggle buttons
That way you can know what state the button is in when it gets clicked

--- a/src/app/molecules/toggle-button/icon-toggle-button.component.html
+++ b/src/app/molecules/toggle-button/icon-toggle-button.component.html
@@ -1,4 +1,4 @@
-<app-button [type]="buttonType" (click)="toggle()">
+<app-button [type]="buttonType" (click)="onClick()">
   <ng-container [ngSwitch]="state">
     
     <ng-container *ngSwitchCase="'TOGGLED'">
