--- a/src/app/molecules/edit-toggle/edit-toggle.component.html
+++ b/src/app/molecules/edit-toggle/edit-toggle.component.html
@@ -1,4 +1,5 @@
 <app-icon-toggle-button
   [toggledStateIcon]="'times'"
   [untoggledStateIcon]="'pencil'"
+  (toggle)="toggle.emit($event)"
 ></app-icon-toggle-button>
