Enabled customizing button-type of edit-toggle

--- a/src/app/molecules/edit-toggle/edit-toggle.component.html
+++ b/src/app/molecules/edit-toggle/edit-toggle.component.html
@@ -1,4 +1,5 @@
 <app-icon-toggle-button
+  [buttonType]="buttonType"
   [toggledStateIcon]="'times'"
   [untoggledStateIcon]="'pencil'"
   (toggle)="toggle.emit($event)"
