Ensure small-create-form can only emit event if value was selected
Also added "empty" option

--- a/src/app/molecules/small-create-form/small-create-form.component.html
+++ b/src/app/molecules/small-create-form/small-create-form.component.html
@@ -29,6 +29,7 @@
       [id]="'select'"
       (change)="onChange($event)"
     >
+      <option [value]="undefined">-----</option>
       <ng-container *ngFor="let option of options; let i = index">
         <option 
           [value]="i"
