Enabled edit-toggle state being controlled from the outside

--- a/src/app/molecules/edit-toggle/edit-toggle.component.html
+++ b/src/app/molecules/edit-toggle/edit-toggle.component.html
@@ -1,6 +1,3 @@
-<app-icon-toggle-button
-  [buttonType]="buttonType"
-  [toggledStateIcon]="'times'"
-  [untoggledStateIcon]="'pencil'"
-  (toggle)="toggle.emit($event)"
-></app-icon-toggle-button>
+<app-button [type]="buttonType" (click)="onClick()">
+  <app-icon [icon]="toggled ? 'times' : 'pencil'"></app-icon>
+</app-button>
