move encounter card over to card component

--- a/src/app/organisms/encounter-card/encounter-card.component.html
+++ b/src/app/organisms/encounter-card/encounter-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<app-card class="card__root">
   <h4 class="card__heading">
     {{ encounter.title }}
     <app-edit-toggle
@@ -23,7 +23,7 @@
       [ngTemplateOutlet]="encounterUpdateState"
     ></ng-container>
   </ng-container>
-</div>
+</app-card>
 
 <ng-template #encounterDisplayState>
   <!-- Encounter -->
