--- a/src/app/detail/encounter-card/encounter-card.component.html
+++ b/src/app/detail/encounter-card/encounter-card.component.html
@@ -65,7 +65,7 @@
 <!-- Form to Update Encounters -->
 <ng-template #encounterUpdateState>
   <div>
-      <h4> {{userModel?.title}} </h4>
+      <h4> {{userModel.title}} </h4>
 
       <ng-container *ngIf="canUpdate && state === 'UPDATE'">
           <app-form
