--- a/src/app/molecules/badge-list/badge-list.component.scss
+++ b/src/app/molecules/badge-list/badge-list.component.scss
@@ -8,13 +8,14 @@
   
   &__list{
     display: inline-flex;
-    align-items: flex-start;
+    align-items: baseline;
     flex-wrap: wrap;
   }
   
   &__entry,
   &__create-form{
     margin: var(--spacer-0) var(--spacer-2) var(--spacer-2) var(--spacer-1);
+    border-bottom: none;
   }
 
 }
