--- a/src/global_class_modifications.scss
+++ b/src/global_class_modifications.scss
@@ -16,3 +16,13 @@
   
   border-radius: var(--bs-border-radius);
 }
+
+.btn a{
+  text-decoration: none;
+  border-bottom: none;
+}
+
+a{
+  text-decoration: none;
+  border-bottom: dotted 2px var(--bs-gray);
+}
