--- a/src/global_class_modifications.scss
+++ b/src/global_class_modifications.scss
@@ -17,12 +17,6 @@
   border-radius: var(--bs-border-radius);
 }
 
-.btn a{
-  text-decoration: none;
-  border-bottom: none;
-}
-
 a{
-  text-decoration: none;
-  border-bottom: dotted 2px var(--bs-gray);
+  text-decoration: dotted;
 }
