--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,13 @@
 	}
 }
 
+blockquote{
+	border-left: solid 4px var(--bs-white);
+	font-style: italic;
+	margin: var(--spacer-0);
+	padding: var(--spacer-2) var(--spacer-0) var(--spacer-1) var(--spacer-4);
+}
+
 @import './custom_ngbootstrap.scss';
 
 @import './global_class_modifications.scss';
